Updates from Overleaf

--- a/My_packages.sty
+++ b/My_packages.sty
@@ -7,7 +7,7 @@
 \usepackage{refstyle}
 \usepackage{amsfonts}
 \usepackage[left=0.8in,right=0.8in,top=0.8in,bottom=0.8in]{geometry}
-\usepackage{balance} 
+%\usepackage{balance} 
 %\usepackage[numbers]{natbib}
 \usepackage{amsmath}
 \usepackage{amssymb}
