--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,38 @@
 %% USE BIBTEX ENTRIES FROM INSPIRE, NO SELF-INVENTED SHORT NAMES!
 
+%% Kronberg 2007
+
+@article{Kronberg_2007,
+	doi = {10.1086/511512},
+	url = {https://doi.org/10.1086/511512},
+	year = 2007,
+	month = {apr},
+	publisher = {American Astronomical Society},
+	volume = {659},
+	number = {1},
+	pages = {267--274},
+	author = {P. P. Kronberg and R. Kothes and C. J. Salter and P. Perillat},
+	title = {Discovery of New Faint Radio Emission on 8o to 3$\prime$ Scales in the Coma Field, and Some Galactic and Extragalactic Implications},
+	journal = {The Astrophysical Journal},
+	abstract = {We present a deep, 8° diameter, 0.4 GHz radio image using a first-time combination of the NAIC Arecibo 305 m telescope in Puerto Rico and the wide-angle interferometer at the Dominion Radio Astrophysical Observatory at Penticton, Canada. Our observations are centered on the Coma Cluster of galaxies in the "Great Wall" of galaxies near the north Galactic pole. The complementary nature of these two instruments enables us to produce a distortion-free image that is sensitive to radiation on scales from 8° down to that of an individual galaxy halo at the 100 Mpc distance of the Great Wall. Newly revealed patches of distributed radio "glow" are seen well above the detection limit. One prominent such area coincides with groupings of radio galaxies near the Coma Cluster and indicates intergalactic magnetic fields in the range 0.2-0.4 μG on scales of up to ~4 Mpc. Other patches of diffuse emission, not previously explored at these high latitudes on arcminute scales, probably consist of Galactic "cirrus." A striking anticorrelation is found between low-level diffuse radio glow and some regions of enhanced optical galaxy surface density, suggesting that cosmological large-scale structure, normally defined by the baryonic (or dark) matter density, is not uniquely traced by faint continuum radio glow. Rather, intergalactic diffuse synchrotron radiation may be a proxy for IGM cosmic-ray and magnetic energy density, rather than matter density. The diffuse, arcminute-level structures over a large region of sky are potentially important pathfinders to CMB foreground radiation on high multipole scales.}
+}
+
+%% Barrow
+@article{Barrow_1997,
+  title = {Constraints on a Primordial Magnetic Field},
+  author = {Barrow, John D. and Ferreira, Pedro G. and Silk, Joseph},
+  journal = {Phys. Rev. Lett.},
+  volume = {78},
+  issue = {19},
+  pages = {3610--3613},
+  numpages = {0},
+  year = {1997},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.78.3610},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.78.3610}
+}
+
 
 %% Arjen 2021
 @article{Arjen_2021,
