--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,18 @@
-\documentclass[12pt, a4 paper]{article}
+%\documentclass[12pt, a4 paper]{article}
+\documentclass[12pt, a4 paper]{mnras}
+
+\usepackage{graphicx}
+\usepackage{amssymb}
+\usepackage{epstopdf}
+\usepackage{amsmath}
+\usepackage{comment,xcolor}
+\usepackage{hyperref}
+\usepackage{gensymb}
+\usepackage{xspace}
+%\usepackage{array}
+\usepackage{cuted}
+\usepackage{flushend}
+%\usepackage{widetext}
 
 \usepackage{My_packages}
 %\usepackage[utf8]{inputenc}
@@ -9,18 +23,26 @@
 \newcommand{\Arjen}[1]{{\color{brown}#1}}
 \newcommand{\Vasu}[1]{{\color{purple}#1}}
 
+\newcommand{\bfm}[1]{\mbox{\boldmath$ #1 $}}
 
-\date{ }
+\title{UHECR and the Halo Magnetic Field}
+%\date{ }
 
 \begin{document}
-\iffalse
-\begin{titlepage}
-    Paper Rough draft
-\end{titlepage}
-\fi
+\maketitle
 
-\tableofcontents
-\newpage
+\begin{abstract}
+blah.....
+\end{abstract}
+
+%\iffalse
+%\begin{titlepage}
+%    Paper Rough draft
+%\end{titlepage}
+%\fi
+
+%\tableofcontents
+%\newpage
 
 \section{Introduction}
 \label{Introducion}
@@ -77,16 +99,15 @@ The minimum and maximum values of wavelength to generate these fields are  $L_{\
 
 Since, we focus only on the Galactic regions of the sky which probe the Galactic halo, we do not include any disk magnetic field component in this model. For the purposes of comparison, we use the JF12 model as a comparative reference since it is a widely known Galactic magnetic field model.
 %We studied each component of the JF12 field separately in order to ascertain how the different components of the Galactic magnetic field model act individually and together. 
-However, it should be noted that the JF12 model was motivated by observations which masked out a large part of the Galactic bubble region, and adopts magnetic fields strengths weaker than the ones suggested by S-PASS observation \cite{Carretti_2013} \
-\begin{figure}[h!]
+However, it should be noted that the JF12 model was motivated by observations which masked out a large part of the Galactic bubble region, and adopts magnetic fields strengths weaker than the ones suggested by S-PASS observation \cite{Carretti_2013}.
+\begin{figure*}
     \centering
     \includegraphics[width = 9cm]{Images/ToyModel_BestFit_XZ.png}%
     \includegraphics[width = 9cm
     ]{Images/ToyModel_BestFit_XY.png}
     \caption{Cross-section of toy model for the Galactic magnetic field in the Galactic halo region in the XY and XZ plane (with the Galactic plane in the XY plane at $z=0$) showing their drop in two dimensions.}
     \label{fig:Vis_TM}
-\end{figure}
-\clearpage
+\end{figure*}
 
 %Discuss the electron distribution
 \subsubsection{Electron Distribution}
@@ -103,13 +124,13 @@ in units of ${\rm cm}^{-3}$, $p =3$ is the spectral index. The parameters, $C_\m
 
 
 % EdNdE plots for some arbitrary parameters which will be fixed post equipartition scans.
-\begin{figure}[h!]
+\begin{figure*}
     \centering
     \includegraphics[width= 8cm]{Images/Linear_EdNdE.png}%
     \includegraphics[width = 8cm]{Images/Log_EdNdE.png}
     \caption{Electron distribution for $R_{\mathrm{el}} = 5$ kpc and $Z_{\mathrm{el}} = 7$~kpc in linear scale on left and log-scale on right.}
     \label{fig:my_label}
-\end{figure}
+\end{figure*}
 
 % synchrotron radiation expressions and theory, also the appendix.
 \subsection{Synchrotron Emission}\label{Synchrotron_theory}
@@ -120,16 +141,28 @@ Synchrotron radiation or magneto-bremsstrahlung radiation is the radiation produ
 %However, for a distribution of particles that vary smoothly with the pitch angle, the elliptical component cancels out and so the emission cones will contribute equally on each side of the line of sight. The radiation then is linearly polarised. 
 The polarised emission can be visualised as an ellipse where the major axis is the perpendicular component ($J_{\rm \perp}$) and the minor axis is the parallel ($J_{\parallel}$) component. We provide a detailed explanation of this in appendix~(\ref{Appendix_A}). 
 
-Equations \ref{Jperp} and \ref{Jpara} describe the two polarised components $J_{\perp}$ and $J_{\parallel}$ for a  given peak photon energy $E_{\gamma}^{\mathrm{peak}}$. In this case, $E_{\gamma}^{\mathrm{peak}} = 1.175 \times 10^{-4}$~eV which is corresponding 28.4~GHz, the peak frequency for 30~GHz Planck data.
-\begin{equation}\label{Jperp}
+The two polarisation emission components, $J_{\perp}$ and $J_{\parallel}$, describe the emission level for a  given peak photon energy $E_{\gamma}^{\mathrm{peak}}$. Expressions for these two components are provided below in eqns~\ref{Jperp} and \ref{Jpara},
+%In this case, $E_{\gamma}^{\mathrm{peak}} = 1.175 \times 10^{-4}$~eV which is corresponding 28.4~GHz, the peak frequency for 30~GHz Planck data.
+
+\begin{strip}
+\begin{equation}
  {J_{\perp}^l} =   \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \  \frac{\mathrm{d}N_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) + G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] * \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9} 
+ \label{Jperp}
 \end{equation}
+\end{strip}
 
 and,
 
-\begin{equation}\label{Jpara}
+\begin{strip}
+%\begin{widetext}
+\begin{equation}
 {J_{\parallel}^l} = \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \ \frac{\mathrm{d}N_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) - G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] * \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9}
+\label{Jpara}
 \end{equation}
+%\end{widetext}
+\end{strip}
+%\hline
+
 where the functions,
 \begin{align}
 F(x) &= x \int_x^\infty K_{5/3}(x') dx'\\
@@ -142,7 +175,6 @@ For clarity, several of the conventions we adopted are here noted. The parallel 
 Q_{\rm in}^{\rm tot} = {\int_0^L \mathrm{d}l \ ({J_{\perp}^l} - J_{\parallel}^l) \ {\cos}(2\Psi^l_{\rm in}) } \\
 U_{\rm in}^{\rm tot} = {\int_0^L \mathrm{d}l \ ({J_{\perp}^l} - J_{\parallel}^l) \ {\sin}(2\Psi^l_{\rm in})} \,
 \end{eqnarray}
-
 
 The polarised flux ($I_{\rm pol}$) can then be expressed in terms of the intrinsic Stokes parameters which are integrated along the line of sight (${Q_{\rm in}}$ \& ${U_{\rm in}}$) :
 \begin{eqnarray} \label{eq_I_pol}
@@ -162,62 +194,47 @@ The intrinsic polarisation angle $\Psi_{\rm in}$ between the Galactic south and 
 \tan(2\Psi_{\rm in}) = \frac{U_{\rm in}^{\rm tot}}{Q_{\rm in}^{\rm tot}} 
 \end{eqnarray}
 
-% Describe the Planck data set and what radio bands were used.
+%% Details of simulation like scanning range, cuts etc
+\subsection{Simulation setup for the polarised synchrotron emission}
+%% Grid details
+Utilising the setup described in the previous section (see section~\ref{Methods}), we generate a synthetic polarised synchrotron emission map for each parameter set of our toy model. The toy model comprises of 5 free parameters, (see table~\ref{Para_table}). The radial cut-off of the magnetic field and electron distribution is kept identical $R_{\mathrm{Mag}}$ = $R_{\mathrm{el}}$ and the same applies to the azimuthal cut-off $Z_{\mathrm{Mag}}$ = $Z_{\mathrm{el}}$. The reason for this constraint is that synchrotron radiation level depends on both non-thermal electron density and magnetic field strength. Thus, even if the spatial extend of the magnetic field differs from the electron distribution, one can only probe the field in the region where both the field and electrons are present. The minimum and maximum value for the spatial parameters are 2~kpc to 19~kpc, which are scanned over in step size of 1~kpc. The range over which both $B_{\rm str}$ and $B_{\rm tur}$ are scanned is 2$~\mu$G to 19$~\mu$G, with a step size of 1$~\mu$G. We calculate the polarised emission for one particular value of $\log_{10}(C_{\rm norm}[{\rm cm}^{-3}]) = -13.85$, and subsequently re-scale these results to obtain the polarised emission maps for different values of  $\log_{10}(C_{\rm norm} [{\rm cm}^{-3}])$, ranging this scan from $-9.84$ to $-15.83$ with a step size of $0.24$ (ie. in 25 steps).
+
+%% Handling of data 
+In our study, we mask out three regions from our skymaps. The first of these is in the Galactic disc region between b = $(-15^{\circ},15^{\circ})$. For the second region, based on observations from \cite{eROSITA} and \cite{Su_2010}, we block out longitudes  $\geq \pm 90^{\circ}$ from the Galactic center (ie. all direction pointing away from the Galactic center direction), so as to ensure that our analysis only covers the region occupied by the Galactic Halo (Fermi and eRosita) bubbles. Lastly, we block out the region associated with the North Polar Spur (NPS). Our motivation here is that the higher latitudes of NPS seem to follow a trend to be originating locally rather than from Galactic center based on the starlight polarisation observations \cite{Gina_2021}. In order to remain as impartial as possible for the designation of this region, we adopt a cut for it selected in \cite{Wolleben_2007}. In fig.~\ref{fig:Skymaps} observational and synthetic skymaps are shown with these three regions removed.
+To obtain best-fit for our model we ran a grid search for over a million configurations. For each toy configuration, a synthetic skymap was generated using Healpix \cite{Healpix_2005}, adopting a resolution with Nside = 32. Since the interests of our study are focused on large scale structures, both the synthetic skymaps and observational data were smoothed out, using a Gaussian kernel, on size scale of $15^{\circ}$, to wash out smaller scale features. We then compare the simulated polarised emission with the Planck data at 30~GHz by evaluating the $\chi^{2}$ value of the model fit to the data. To find the best fit parameters and their constraints, we carry out a grid search over the 5 free parameters, sampling in total a million parameter points.
+
 
 \subsection{Observational Data}
 % discussion of data sets used
 For our synchrotron emission study We use the publicly available from the Planck satellite mission \footnote{\textcolor{purple}{http://pla.esac.esa.int/pla/}}. Specifically, we use the polarised radio data at 30~GHz from Planck where the peak frequency is at 28.4~GHz, with a band width of 9.8~GHz. At this frequency a considerable level of polarised synchrotron emission is observed, with a only a small level of Faraday rotation occurring at these high frequencies. However, we also note that in this 30~GHz band, the Planck data cannot be used to probe synchrotron intensity directly, since at this frequency the unpolarised sky receives a considerable contributions from both thermal bremsstrahlung and anomalous microwave emission, as well as synchrotron radiation \Andrew{reference needed to justify this claim}. 
-%\Andrew{justification of Planck bands not considered needs providing}
-%We intentionally do not consider the low frequency data available from S-PASS, since this data set masks out a large region of the Galactic halo bubbles and would not prove suitable for our study. \Andrew{mentioning data sets not used looks odd here}
 
-%(see section \ref{Faraday_Rotation}). 
-% Hence, we also do a comparison with the 408~MHz Haslam data for total intensity where most of the unpolarised radiation comes from the synchrotron radiation.
-%\textcolor{blue}{Results} section.
-
-%\clearpage
-%\newpage
-%\subsection{Comparison to Planck data}
-\section{Results}
+\section{Results - Part I}
 \label{Results}
 
-%\Vasu{I have added the points to address in the result section.}
 %% Skymap comparison and explanation of smoothening method
-
-
-
-Utilising the setup described in the previous section (see section~\ref{Methods}), we generate a synthetic polarised synchrotron emission map for each parameter set of our toy model. The toy model comprises of 5 free parameters, (see table~\ref{Para_table}). The radial cut-off of the magnetic field and electron distribution is kept identical $R_{\mathrm{Mag}}$ = $R_{\mathrm{el}}$ and the same applies to the azimuthal cut-off $Z_{\mathrm{Mag}}$ = $Z_{\mathrm{el}}$. The reason for this constraint is that synchrotron radiation level depends on both non-thermal electron density and magnetic field strength. Thus, even if the spatial extend of the magnetic field differs from the electron distribution, one can only probe the field in the region where both the field and electrons are present. The minimum and maximum value for the spatial parameters are 2~kpc to 19~kpc, which are scanned over in step size of 1~kpc. 
-The range over which both $B_{\rm str}$ and $B_{\rm tur}$ are scanned is 2$~\mu$G to 19$~\mu$G, with a step size of 1$~\mu$G. We calculate the polarised emission for one particular value of $\log_{10}(C_{\rm norm}[{\rm cm}^{-3}]) = -13.85$, and subsequently re-scale these results to obtain the polarised emission maps for different values of  $\log_{10}(C_{\rm norm} [{\rm cm}^{-3}])$, ranging this scan from $-9.84$ to $-15.83$ with a step size of $0.24$ (ie. in 25 steps).
-
-
-%\Vasu{I have addressed this.}We use the techniques \Andrew{techniques? synchrotron emission methods you mean?} mentioned in Section~\ref{method} to generate synthetic polarised synchrotron radiation skymaps. 
-
-In our study, we mask out three regions from our skymaps. The first of these is in the Galactic disc region between b = $(-15^{\circ},15^{\circ})$. For the second region, based on observations from \cite{eROSITA} and \cite{Su_2010}, we block out longitudes  $\geq \pm 90^{\circ}$ from the Galactic center (ie. all direction pointing away from the Galactic center direction), so as to ensure that our analysis only covers the region occupied by the Galactic Halo (Fermi and eRosita) bubbles. Lastly, we block out the region associated with the North Polar Spur (NPS). Our motivation here is that the higher latitudes of NPS seem to follow a trend to be originating locally rather than from Galactic center based on the starlight polarisation observations \cite{Gina_2021}. In order to remain as impartial as possible for the designation of this region, we adopt a cut for it selected in \cite{Wolleben_2007}. In fig.~\ref{fig:Skymaps} observational and synthetic skymaps are shown with these three regions removed.
-
-To obtain best-fit for our model we ran a grid search for over a million configurations. For each toy configuration, a synthetic skymap was generated using Healpix \cite{Healpix_2005}, adopting a resolution with Nside = 32. Since the interests of our study are focused on large scale structures, both the synthetic skymaps and observational data were smoothed out, using a Gaussian kernel, on size scale of $15^{\circ}$, to wash out smaller scale features. We then compare the simulated polarised emission with the Planck data at 30~GHz by evaluating the $\chi^{2}$ value of the model fit to the data. To find the best fit parameters and their constraints, we carry out a grid search over the 5 free parameters, sampling in total a million parameter points.%We convert the temperature units ($K_{\rm CMB})$ of Planck data into brightness units (cm$^{-2}$~sec$^{-1}$~sr$^{-1}$). THIS IS OBVIOUS
-
 
 In Fig.~\ref{fig:Skymaps} the smoothened skymap obtained from the best fit value of the parameters and the smoothened polarised Planck data is shown along with the residuals. The best-fit values used for the parameters are provided in table~\ref{Para_table}. 
 %% Polarisation fraction
 We next estimate the polarisation fraction obtained by our best-fit toy-model which is given in figure \ref{fig:Skymaps} which was calculated taking the ratio of the polarised to the total intensity. The polarisation fraction for the best-fit toy model is comparable to the values as seen in the observation data \cite{Carretti_2013} and \cite{WMAP_Page}.
 %% Polarised Skymap
 
-\begin{figure}[h!]
-        \centering
-        \includegraphics[width =9cm]{Images/Jan-17-2022_Planck_Sky_Map.png}%
-        \includegraphics[width=9cm]{Images/Jan-20-2022Ver1_Skymap_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_3.76e-13.png}
-        \includegraphics[width = 9cm]{Images/Jan-20-2022_Residue_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_3.76e-13.png}%
-        \includegraphics[width =9cm]{Images/Jan-20-2022_Pol_Frac_30GHz_Total_Skymap_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_-1.24e+01.png}
+\begin{figure*}
+\centering
+\includegraphics[width =0.49\linewidth]{Images/Jan-17-2022_Planck_Sky_Map.png}%
+\includegraphics[width=0.49\linewidth]{Images/Jan-20-2022Ver1_Skymap_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_3.76e-13.png}
+\includegraphics[width = 0.49\linewidth]{Images/Jan-20-2022_Residue_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_3.76e-13.png}%
+\includegraphics[width =0.49\linewidth]{Images/Jan-20-2022_Pol_Frac_30GHz_Total_Skymap_Bstr_3_Btur_6_Rmag_5_Zmag_7_norm_-1.24e+01.png}
+\caption{\textbf{Top:} Planck polarised emission (\textbf{left}) and simulated polarised emission skymap from best fit parameters (see table ~\ref{Para_table}). \textbf{Bottom:} Residual of observation and simulated data (\textbf{left}) and polarisation fraction for toy model (\textbf{right}).}
+\label{fig:Skymaps}
+\end{figure*}
 
-    \caption{\textbf{Top:} Planck polarised emission (\textbf{left}) and simulated polarised emission skymap from best fit parameters (see table ~\ref{Para_table})
-            \newline \textbf{Bottom:} Residual of observation and simulated data (\textbf{left}) and polarisation fraction for toy model (\textbf{right}).}
-    \label{fig:Skymaps}
-\end{figure}
-
-\newpage
+%\newpage
 
 %% Uncertainities in the parameters
-\label{Para_table}
-\begin{center}
+
+\begin{table*}
+\centering
+\caption{CAPTION TEXT NEEDED HERE}
 \begin{tabular}{ |p{4.cm}|p{4.5cm}|p{6.5cm}|  }
 \hline
 \multicolumn{3}{|c|}{Best-fit value with 1-$\sigma$ constraint} \\
@@ -237,27 +254,27 @@ $Z_{\mathrm{Mag}}$ = $Z_{\mathrm{el}}$ & $7_{-1}^{+1}$~kpc & Azimuthal cut\\
 ${\rm{log_{10}}}(C_{\rm norm} [{\rm cm}^{-3}]$) & ${-12.43}_{{-1.31}}^{{+0.32}}$ & Electron normalisation at 10~GeV\\
 \hline
 \end{tabular}
-
-\end{center}
-
+\label{Para_table}
+\end{table*}
 
 \section{Cosmic ray deflections from different magnetic field models}
 \label{Deflections}
 
-When charged particles propagate through magnetic fields, they precess around the field lines by virtue of the Lorentz force ($\it{\Gamma} m \frac{{\rm d}\vec{v}}{{\rm d}t} = \frac{q}{c} \vec{v}\cross \vec{B}$), where $\it{\Gamma} = \frac{E}{m\rm c^2}$ is the Lorentz factor and $q = Z \rm e$ here, $Z$ is the atomic number. 
-The radius of the circular motion that the particle undergoes is called the Larmor radius $r_L = \frac{pc}{Z\rm {e}B}$, where $p$ is the particle momentum. Since cosmic rays are highly relativistic $pc\approx E$. 
-UHECRs also undergo the same Lorentz force when propagating through Galactic magnetic fields. The extra-Galactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Arjen_2021} \Andrew{reference needed here}, and the ultra-high energy cosmic rays UHECRs $E > 10^{19}$ EeV and subsequently $r_{L}>{\rm 10~Mpc}$ are therefore not sensitive to them over 10~Mpc propagation distance scales. However, once they enter the Galaxy magnetic fields are of the order of few $\mu$G. In case for a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$ , this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
+When charged particles propagate through magnetic fields, they precess around the field lines by virtue of the Lorentz force 
+\begin{eqnarray}
+\frac{{\rm d}\bfm{\beta}}{c{\rm d}t} = \frac{1}{r_{L}}\bfm{\beta}\cross \bfm{\hat{B}}, 
+\end{eqnarray}
+where $\bfm{\beta}$ is the particle's velocity vector, and $r_{L}$ is the particle's Larmor radius. UHECRs undergo the same Lorentz force when propagating through Galactic magnetic fields. The extra-Galactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Barrow_1997}, \cite{Kronberg_2007}, and the ultra-high energy cosmic rays UHECRs $E > 10^{19}$ EeV and subsequently $r_{L}>{\rm 10~Mpc}$ are therefore not sensitive to them over 10~Mpc propagation distance scales. However, once they enter the Galaxy magnetic fields are of the order of few $\mu$G. In case for a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$ , this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
 
-
-We know that the propagation of cosmic rays is vital to understand their sources and this is in turn is sensitive to their deflection by magnetic fields. However both Galactic and extra-Galactic magnetic fields are poorly known. In this section we attempt to address the effect the toy model magnetic fields will have on the deflections of UHECRs. The aim of this study is not to depict reality but to understand how our simple structured and turbulent halo magnetic field model affects the propagation of extra-Galactic cosmic rays. 
+The propagation of cosmic rays is vital to understand their sources, and this is in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extra-Galactic magnetic fields are presently poorly understood. In this section we attempt to address the effect the toy model magnetic fields will have on the deflections of UHECRs. The aim of this study is not to depict reality but to understand how our simple structured and turbulent halo magnetic field model affects the propagation of extra-Galactic cosmic rays. 
 
 To propagate the cosmic rays we used the CRPropa3's \cite{CRPropa3_2016} Boris pusher scheme in order to ensure particle's trajectory evolution satisfies the Lorentz force equation. CRPropa conserves the total energy each particle during the propagation.  \Vasu{Arjen may be you have some comment on this ?!}
-To achieve this we backtrack $10^7$ cosmic rays starting isotropically from earth to a distance of 20~kpc with a trajectory length of 300~kpc. We use nitrogen as a choice of our cosmic ray particles at 40~EeV energy. 
+To achieve this we backtrack $10^7$ cosmic rays starting isotropically from earth to a distance of 20~kpc. We use nitrogen as a choice of our cosmic ray particles at 40~EeV energy. 
 
 
-In figure~\ref{fig:AD_Plots} we show two kinds of plots, \textit{1)} the histogram of all sky in log (density/str) of the backtracked positions for the cosmic rays (\textbf{left}), there are 180 bins both for longitudes and latitudes.\textit{2)} is the histogram of binned arrival directions of cosmic rays in a $5^{\circ}$ region from two known sources (\textbf{right}) Centaurus A (lat = $\rm 19.42^{\circ}$, lon = $\rm 309.51^{\circ}$) and NGC 253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$).  We normalise both the skymaps with first making histograms with no-magnetic fields and then dividing the histogram generated using toy model by the former. This gives us a normalised value of the number of hits obtained as seen on the right in the figure~\ref{fig:AD_Plots}.
+In figure~\ref{fig:AD_Plots} we show, \textit{1)} the histogram of all sky in log (density/str) of the backtracked positions for the cosmic rays (\textbf{left}), there are 180 bins both for longitudes and latitudes.\textit{2)} is the histogram of binned arrival directions of cosmic rays in a $5^{\circ}$ region from two known sources (\textbf{right}) Centaurus A (lat = $\rm 19.42^{\circ}$, lon = $\rm 50.49^{\circ}$) and NGC 253 (lat = $\rm -87.96^{\circ}$, lon = $\rm 97.36^{\circ}$).  We normalise both the skymaps with first making histograms with no-magnetic fields and then dividing the histogram generated using toy model by the former. This gives us a normalised value of the number of hits obtained as seen on the right in the figure~\ref{fig:AD_Plots}.
 
-It can be seen that the best fit and lower extreme parameters can clearly help in associating the deflected particles with their potential source. However, in the case of upper extreme parameters any connection between the point of origin of cosmic rays and their final positions is inconclusive. Cosmic rays from  sources like NGC253 get completely deflected by the magnetic field and hence we obtain a suppressed flux $\approx 5\%$ . In case of Centaurus A the final positions are spread out on the entire sky making it impossible to associate it with the source.
+It can be seen that the best fit and lower extreme parameters can clearly help in associating the deflected particles with their potential source. However, in the case of upper extreme parameters any connection between the point of origin of cosmic rays and their final positions is inconclusive. Cosmic rays from  sources like NGC253 get completely deflected by the magnetic field and hence we obtain a suppressed flux $\approx 5\%$ . In case of Centaurus A the final positions are spread out on the entire sky making it impossible to associate it with the source. In table~{\ref{AD_table}} we show the 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Lower Bound
 
@@ -273,7 +290,7 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
 %%% Upper Bound
 
 %%% NGC253 mean lat = -2.322388780731066 and lon = -8.664927316867324 degrees
-%%% NGC253 standard deviation lat = 39.046039934810125 and lon = 98.20089826558244 degrres
+%%% NGC253 standard deviation lat = 39.046039934810125 and lon = 98.20089826558244 degrees
 %%% NGC253 variance lat = 0.46441765734531754 and lon = 2.937552627840132
 
 %%% CenA mean lat = 0.33584693428469714 and lon = 32.07788442314936 degrees
@@ -284,7 +301,7 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
 %%% Best Fit
 
 %%% NGC253 mean lat = -48.890861373380375 and lon = -1.3601224872785176 degrees
-%%% NGC253 standard deviation lat = 22.865215337703397 and lon = 83.981593692422 degrres
+%%% NGC253 standard deviation lat = 22.865215337703397 and lon = 83.981593692422 degrees
 %%% NGC253 variance lat = 0.15925949224439517 and lon = 2.1484386610540773
 
 %%% CenA mean lat = 8.648647356708622 and lon = 45.80995936362569 degrees
@@ -292,9 +309,12 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
 %%% CenA variance lat = 0.2504180851714255 and lon = 0.3876751990217161
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\caption{CAPTION TEXT GOES HERE}
 \label{AD_table}
-\begin{center}
+%\begin{center}
+\begin{table*}
+\centering
+\caption{CAPTION TEXT GOES HERE}
 \begin{tabular}{|p{3.cm}|p{4.cm}|p{4.cm}|p{4.cm}|}
     \hline
     Parameter set & Mean (${}^\circ$)& SD (${}^\circ$) & Variance ($str$)\\
@@ -308,7 +328,7 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
      Lower & $\overline{b} = 14.13$  , $\overline{l} = 39.59$ & $\sigma_{b} = 22.42$, $\sigma_{l} = 26.03$ & $\sigma^2_{b} = 0.15 $, $\sigma^2_{l} = 0.20$\\
     \hline
     \rule{0pt}{3ex} 
-     Upper & $\overline{b} = 0.33$, $\overline{l} = 32.07$ & $\sigma_{b} = 38.06$ , $\sigma_{l} = 83.47$ & $\sigma^2_{b} = 0.46 $, $\sigma^2_{l} = 2.12$\\
+     Upper & $\overline{b} = 0.33$, $\overline{l} = 32.07$ & $\sigma_{b} = 38.06$ , $\sigma_{l} = 83.47$ & $\sigma^2_{b} = 0.44 $, $\sigma^2_{l} = 2.12$\\
     \hline
   \multicolumn{4}{|c|}{NGC 253} \\ 
     \hline
@@ -322,23 +342,28 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
      Upper & $\overline{b} = -2.32$, $\overline{l} = -8.66$ & $\sigma_{b} = 39.04$ , $\sigma_{l} = 98.20 $& $\sigma^2_{b} = 0.44 $, $\sigma^2_{l} = 2.93$\\
     \hline
 \end{tabular}
-\end{center}
-\newpage
-\begin{figure}[h!]
-\includegraphics[width=9.0cm]{Images/Log_Bins_180_Historgam_BF_N2_Str_Tur_TM_40_EeV.png}
-\includegraphics[width=9.0cm]{Images/Bins_180_BF_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}
-\includegraphics[width=9.0cm]{Images/Log_Bins_180_Historgam_LB_N2_Str_Tur_TM_40_EeV.png}
-\includegraphics[width=9.0cm]{Images/Bins_180_LB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}
-\includegraphics[width=9.0cm]{Images/Log_Bins_180_Historgam_UB_N2_Str_Tur_TM_40_EeV.png}
-\includegraphics[width=9.0cm]{Images/Bins_180_UB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}
+\end{table*}
+
+%\end{center}
+%\newpage
+
+\centering
+\begin{figure*}
+\includegraphics[width=0.49\linewidth]{Images/Log_Bins_180_Historgam_BF_N2_Str_Tur_TM_40_EeV.png}
+\includegraphics[width=0.49\linewidth]{Images/Bins_180_BF_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}\\
+\includegraphics[width=0.49\linewidth]{Images/Log_Bins_180_Historgam_LB_N2_Str_Tur_TM_40_EeV.png}
+\includegraphics[width=0.49\linewidth]{Images/Bins_180_LB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}\\
+\includegraphics[width=0.49\linewidth]{Images/Log_Bins_180_Historgam_UB_N2_Str_Tur_TM_40_EeV.png}
+\includegraphics[width=0.49\linewidth]{Images/Bins_180_UB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}
 \caption{Log brightness of the backtracked positions for cosmic rays shown on \textbf{left} and the arrival directions of the cosmic rays from two known sources Cen A and NGC 253 on \textbf{right} (From table~\ref{Para_table} \textbf{Top} - Best Fit Parameters, {\textbf{Middle} - Lower extreme parameters)} \& {\textbf{Bottom} - Upper extreme parameters, we use $R_{\rm Mag} = $ 20~kpc since that is the maximum extent of the magnetic fields in our simulation.}}
 \label{fig:AD_Plots}
-\end{figure}
-\newpage
+\end{figure*}
+%\newpage
+
 \section{Conclusions}
 \label{Conclusions}
 
-\clearpage
+%\clearpage
 \section{References}
 
 \printbibliography[heading=none]
@@ -348,16 +373,16 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
 In table ~\ref{Para_table} we provide the list of all free parameters and the constraints obtained on them.
 \newline
 %We obtained $1\sigma$ constraint for $B_{\mathrm Mag}$ = [2,9]$\mu$ G,$B_{\mathrm tur}$ = [4,15)$\mu$ G , $R_{\mathrm Mag}$ = [4,5), $Z_{\mathrm Mag}$ = [6,7) and $C_{\mathrm norm}$= $\mathrm{(5\times 10^{-14},8.83}\times 10^{-13}]$. 
-
+\iffalse
 \begin{figure}[h!]
         \centering
         \includegraphics[width = 10cm]{Images/Jan20_Chsq_dof_Para_Scan_1_9_3_elec_den_norm_10GeV.png}
         \caption{\Vasu{I think we do not need this plot for the paper. i can put it in my thesis. Please let me know what you think.}}
         \label{fig:my_label}
 \end{figure}
+\fi
 
-
-\newpage
+%\newpage
 \section{Appendix A}\label{Appendix_A}
 As discussed in section(\ref{Synchrotron_theory}) the line of sight components for Stokes parameters is given by:
 \begin{eqnarray}
@@ -385,14 +410,14 @@ We can take two test cases (I \& II) given in figure(\ref{fig_tot_intensity}) an
     \caption{Simplified diagram of emission components for total and polarised intensities in terms of the polarisation ellipses.}
 \end{figure}
 
-\newpage
+%\newpage
 \section{Appendix B}\label{Appendix_B}
 As discussed in section ~\ref{GMF} we generate the turbulent fields for our model using CRPropa3 ~\cite{CRPropa3_2016}. We the minimum and maximum wavelength we use to generate these fields are 
 $L_{min}$ = 200 pc and $L_{max}$ = 400 pc and $L_{coh} \approx $~150 kpc. One of the major reasons why we do not have enough decades covered for the wavelength is because of the time it takes to generate these fields using CRPropa. 
 We looked at power spectrum for different realisations of the turbulent field. In figure ~\ref{fig:PowerSpectrum} we plot power spectrum in X,Y and Z directions by averaging over the other two directions. We chose this particular realisation since it followed closely a power law spectrum of index (5/3). 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width = 12cm]{Images/Jan3_Test_PowerSpectrum_vs_lambda_seed_10.png}
+    \includegraphics[width = 10cm]{Images/Jan27_Test_PowerSpectrum_vs_lambda_seed_10_lmin_200.0lmax_400.0.png}
     \caption{Power spectrum plot versus wavelength for X, Y and Z direction.}
     \label{fig:PowerSpectrum}
 \end{figure}
@@ -409,7 +434,7 @@ We looked at power spectrum for different realisations of the turbulent field. I
     \caption{In figure Haslam data is shown top left, toy model total intensity map top right and in the bottom JF12 skymaps. The disc field is removed from this skymap and it includes Xfield, toroidal halo and turbulent fields.All calculated at $408$MHz. \Andrew{Color bar scales should have a fixed ranged (to allow easy comparison between maps)}}
     \label{fig:my_label}
 \end{figure}
-\newpage
+%\newpage
 
 \fi
 
