--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,170 @@
 %% USE BIBTEX ENTRIES FROM INSPIRE, NO SELF-INVENTED SHORT NAMES!
+%% Sanriku 1999
+@inproceedings{Sanriku_1999,
+  title={High energy cosmic-ray electrons beyond 100 GeV},
+  author={Kobayashi, Tadashi},
+  booktitle={26th International Cosmic Ray Conference (ICRC26), Volume 3},
+  volume={3},
+  pages={61},
+  year={1999}
+}
+%% Orlando 2011
+@article{Orlando_2011,
+   title={The interstellar cosmic-ray electron spectrum from synchrotron radiation and direct measurements},
+   volume={534},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201116828},
+   DOI={10.1051/0004-6361/201116828},
+   journal={Astronomy & Astrophysics},
+   publisher={EDP Sciences},
+   author={Strong, A. W. and Orlando, E. and Jaffe, T. R.},
+   year={2011},
+   month={Sep},
+   pages={A54}
+}
+
+%% Pamela
+@article{Pamela,
+  title={Cosmic-ray electron flux measured by the PAMELA experiment between 1 and 625 GeV},
+  author={Adriani, O and Barbarino, GC and Bazilevskaya, GA and Bellotti, R and Boezio, M and Bogomolov, EA and Bongi, M and Bonvicini, V and Borisov, S and Bottai, S and others},
+  journal={Physical Review Letters},
+  volume={106},
+  number={20},
+  pages={201101},
+  year={2011},
+  publisher={APS}
+}
+%% Fermi 2009
+@article{FERMI_2009,
+  title={Measurement of the cosmic ray e++ e- spectrum from 20 GeV to 1 TeV with the Fermi Large Area Telescope},
+  author={Abdo, Aous A and Ackermann, Markus and Ajello, Marco and Atwood, WB and Axelsson, Magnus and Baldini, Luca and Ballet, Jean and Barbiellini, Guido and Bastieri, Denis and Battelino, Milan and others},
+  journal={Physical Review Letters},
+  volume={102},
+  number={18},
+  pages={181101},
+  year={2009},
+  publisher={APS}
+}
+%% FERMI 2010
+@article{FERMI_2010,
+  title={Fermi LAT observations of cosmic-ray electrons from 7 GeV to 1 TeV},
+  author={Ackermann, Markus and Ajello, Marco and Atwood, WB and Baldini, Luca and Ballet, Jean and Barbiellini, Guido and Bastieri, D and Baughman, BM and Bechtol, K and Bellardi, F and others},
+  journal={Physical Review D},
+  volume={82},
+  number={9},
+  pages={092004},
+  year={2010},
+  publisher={APS}
+}
+%% HESS 2008
+@article{HESS_2008,
+  title={HESS very-high-energy gamma-ray sources without identified counterparts},
+  author={Aharonian, Felix and Akhperjanian, AG and De Almeida, U Barres and Bazer-Bachi, AR and Behera, B and Beilicke, M and Benbow, W and Bernl{\"o}hr, K and Boisson, C and Bolz, O and others},
+  journal={Astronomy \& Astrophysics},
+  volume={477},
+  number={1},
+  pages={353--363},
+  year={2008},
+  publisher={EDP Sciences}
+}
+%% HESS 2009
+@article{HESS_2009,
+  title={Probing the ATIC peak in the cosmic-ray electron spectrum with HESS},
+  author={Aharonian, F and Akhperjanian, AG and Anton, G and De Almeida, U Barres and Bazer-Bachi, AR and Becherini, Yvonne and Behera, B and Bernl{\"o}hr, K and Bochow, A and Boisson, C and others},
+  journal={Astronomy \& Astrophysics},
+  volume={508},
+  number={2},
+  pages={561--564},
+  year={2009},
+  publisher={EDP Sciences}
+}
+%% ATIC-1-2
+@inproceedings{AITC_1_2,
+  title={Determining the detection efficiency and background level of ATIC electron observation from flight data},
+  author={Chang, J and Wu, J and Guzik, TG and Wefel, JP and Isbert, J and Adams Jr, JH and Christl, M and Watts, J and Ahn, HS and Kim, KC and others},
+  booktitle={31st International Cosmic Ray Conference, ICRC 2009},
+  year={2009}
+}
+%% PPT-Bets
+@article{PPT_BETS,
+  title={The interstellar cosmic-ray electron spectrum from synchrotron radiation and direct measurements},
+  author={Strong, AW and Orlando, E and Jaffe, TR},
+  journal={Astronomy \& Astrophysics},
+  volume={534},
+  pages={A54},
+  year={2011},
+  publisher={EDP Sciences}
+}
+%% BETS 2001
+@article{Bets_2001,
+  title={The energy spectrum of cosmic-ray electrons from 10 to 100 GeV observed with a highly granulated imaging calorimeter},
+  author={Torii, S and Tamura, T and Tateyama, N and Yoshida, Kenji and Nishimura, J and Yamagami, T and Murakami, H and Kobayashi, T and Komori, Y and Kasahara, K and others},
+  journal={The Astrophysical Journal},
+  volume={559},
+  number={2},
+  pages={973},
+  year={2001},
+  publisher={IOP Publishing}
+}
+%% HEAT
+@article{Heat_2001,
+	doi = {10.1086/322324},
+	url = {https://doi.org/10.1086/322324},
+	year = 2001,
+	month = {sep},
+	publisher = {American Astronomical Society},
+	volume = {559},
+	number = {1},
+	pages = {296--303},
+	author = {M. A. DuVernois and S. W. Barwick and J. J. Beatty and A. Bhattacharyya and C. R. Bower and C. J. Chaput and S. Coutu and G. A. de Nolfo and D. M. Lowder and S. McKee and D. Muller and J. A. Musser and S. L. Nutter and E. Schneider and S. P. Swordy and G. Tarle and A. D. Tomasch and E. Torbet},
+	title = {Cosmic-Ray Electrons and Positrons from 1 to 100 {GeV}: Measurements with {HEAT} and Their Interpretation},
+	journal = {The Astrophysical Journal},
+	abstract = {Measurements of the energy spectra of negative electrons and positrons have been performed with the High-Energy Antimatter Telescope (HEAT) in two balloon flights—1994 May from Fort Sumner, NM, and 1995 August from Lynn Lake, Manitoba. We present the combined data set from these two flights, covering the energy range 1-100 GeV. We compare our data with results from other groups and discuss the data in the context of diffusive propagation models. There is some evidence that primary electrons above 10 GeV and cosmic-ray nuclei exhibit the same energy spectrum at the source, but that the source spectrum becomes harder at lower energy. Within the experimental uncertainties, the intensity of positrons is consistent with a purely secondary origin, due to nuclear interactions in interstellar space.}
+}
+
+
+%% Caprice 2000
+@article{CAPRICE_2001,
+title = {Measurements of cosmic-ray electrons and positrons by the Wizard/CAPRICE collaboration},
+journal = {Advances in Space Research},
+volume = {27},
+number = {4},
+pages = {669-674},
+year = {2001},
+issn = {0273-1177},
+doi = {https://doi.org/10.1016/S0273-1177(01)00108-9},
+url = {https://www.sciencedirect.com/science/article/pii/S0273117701001089},
+author = {M. Boezio and G. Barbiellini and V. Bonvicini and P. Schiavon and A. Vacchi and N. Zampa and D. Bergström and P. Carlson and T. Francke and S. Grinstein and N. Weber and M. Suffert and M. Hof and J. Kremer and W. Menn and M. Simon and S.A. Stephens and M. Ambriola and R. Bellotti and F.S. Cafagna and F. Ciacio and M. Circella and C. {De Marzo} and N. Finetti and P. Papini and S. Piccardi and P. Spillantini and S. Bartalucci and M. Ricci and C. Grimani and M. Casolino and M.P. {De Pascale} and A. Morselli and P. Picozza and R. Sparvoli and J.W. Mitchell and J.F. Ormes and R.E. Streitmatter and U. Bravar and S.J. Stochaj},
+abstract = {Two recent ballon-borne experiments have been performed by the WiZard/CAPRICE collaboration in order to study the electron and positron components in the cosmic radiation. On 1994 August 8–9 the CAPRICE94 experiment flew from norther Canada and on 1998 May 28–29 the CAPRICE98 experiment flew from New Mexico, USA at altitudes corresponding to 3.9 and 5.5 g/cm2 of average residual atmosphere respectively. The apparatus were equipped with a Ring Imaging Cherenkov (RICH) detector, a time-of-flight system, a superconducting magnet spectrometer with a tracking system and a 7-radiation-length silicon-tungsten imaging calorimeter. The RICH used in 1994 had a solid NaF radiator while in 1998 the RICH had a C4F10 gaseous radiator. We report on the electron and positron spectra and positron fraction at the top of the atmosphere from few hundred MeV to 40 GeV measured by these two experiments.}
+}
+%% AMS 2002
+@ARTICLE{AMS_2002,
+       author = {{AMS Collaboration} and {Aguilar}, M. and {Alcaraz}, J. and {Allaby}, J. and {Alpat}, B. and {Ambrosi}, G. and {Anderhub}, H. and {Ao}, L. and {Arefiev}, A. and {Azzarello}, P. and {Babucci}, E. and {Baldini}, L. and {Basile}, M. and {Barancourt}, D. and {Barao}, F. and {Barbier}, G. and {Barreira}, G. and {Battiston}, R. and {Becker}, R. and {Becker}, U. and {Bellagamba}, L. and {B{\'e}n{\'e}}, P. and {Berdugo}, J. and {Berges}, P. and {Bertucci}, B. and {Biland}, A. and {Bizzaglia}, S. and {Blasko}, S. and {Boella}, G. and {Boschini}, M. and {Bourquin}, M. and {Brocco}, L. and {Bruni}, G. and {Bu{\'e}nerd}, M. and {Burger}, J.~D. and {Burger}, W.~J. and {Cai}, X.~D. and {Camps}, C. and {Cannarsa}, P. and {Capell}, M. and {Casadei}, D. and {Casaus}, J. and {Castellini}, G. and {Cecchi}, C. and {Chang}, Y.~H. and {Chen}, H.~F. and {Chen}, H.~S. and {Chen}, Z.~G. and {Chernoplekov}, N.~A. and {Chiueh}, T.~H. and {Cho}, K. and {Choi}, M.~J. and {Choi}, Y.~Y. and {Chuang}, Y.~L. and {Cindolo}, F. and {Commichau}, V. and {Contin}, A. and {Cortina-Gil}, E. and {Cristinziani}, M. and {da Cunha}, J.~P. and {Dai}, T.~S. and {Delgado}, C. and {Deus}, J.~D. and {Dinu}, N. and {Djambazov}, L. and {D'Antone}, I. and {Dong}, Z.~R. and {Emonet}, P. and {Engelberg}, J. and {Eppling}, F.~J. and {Eronen}, T. and {Esposito}, G. and {Extermann}, P. and {Favier}, J. and {Fiandrini}, E. and {Fisher}, P.~H. and {Fluegge}, G. and {Fouque}, N. and {Galaktionov}, Yu. and {Gervasi}, M. and {Giusti}, P. and {Grandi}, D. and {Grimms}, O. and {Gu}, W.~Q. and {Hangarter}, K. and {Hasan}, A. and {Hermel}, V. and {Hofer}, H. and {Huang}, M.~A. and {Hungerford}, W. and {Ionica}, M. and {Ionica}, R. and {Jongmanns}, M. and {Karlamaa}, K. and {Karpinski}, W. and {Kenney}, G. and {Kenny}, J. and {Kim}, D.~H. and {Kim}, G.~N. and {Kim}, K.~S. and {Kim}, M.~Y. and {Klimentov}, A. and {Kossakowski}, R. and {Koutsenko}, V. and {Kraeber}, M. and {Laborie}, G. and {Laitinen}, T. and {Lamanna}, G. and {Lanciotti}, E. and {Laurenti}, G. and {Lebedev}, A. and {Lechanoine-Leluc}, C. and {Lee}, M.~W. and {Lee}, S.~C. and {Levi}, G. and {Levtchenko}, P. and {Liu}, C.~L. and {Liu}, H.~T. and {Lopes}, I. and {Lu}, G. and {Lu}, Y.~S. and {L{\"u}belsmeyer}, K. and {Luckey}, D. and {Lustermann}, W. and {Ma{\~n}a}, C. and {Margotti}, A. and {Mayet}, F. and {McNeil}, R.~R. and {Meillon}, B. and {Menichelli}, M. and {Mihul}, A. and {Mourao}, A. and {Mujunen}, A. and {Palmonari}, F. and {Papi}, A. and {Park}, H.~B. and {Park}, W.~H. and {Pauluzzi}, M. and {Pauss}, F. and {Perrin}, E. and {Pesci}, A. and {Pevsner}, A. and {Pimenta}, M. and {Plyaskin}, V. and {Pojidaev}, V. and {Pohl}, M. and {Postolache}, V. and {Produit}, N. and {Rancoita}, P.~G. and {Rapin}, D. and {Raupach}, F. and {Ren}, D. and {Ren}, Z. and {Ribordy}, M. and {Richeux}, J.~P. and {Riihonen}, E. and {Ritakari}, J. and {Ro}, S. and {Roeser}, U. and {Rossin}, C. and {Sagdeev}, R. and {Santos}, D. and {Sartorelli}, G. and {Sbarra}, C. and {Schael}, S. and {Schultz von Dratzig}, A. and {Schwering}, G. and {Scolieri}, G. and {Seo}, E.~S. and {Shin}, J.~W. and {Shoutko}, V. and {Shoumilov}, E. and {Siedling}, R. and {Son}, D. and {Song}, T. and {Steuer}, M. and {Sun}, G.~S. and {Suter}, H. and {Tang}, X.~W. and {Ting}, Samuel C.~C. and {Ting}, S.~M. and {Tornikoski}, M. and {Torsti}, J. and {Tr{\"u}mper}, J. and {Ulbricht}, J. and {Urpo}, S. and {Valtonen}, E. and {Vandenhirtz}, J. and {Velcea}, F. and {Velikhov}, E. and {Verlaat}, B. and {Vetlitsky}, I. and {Vezzu}, F. and {Vialle}, J.~P. and {Viertel}, G. and {Vit{\'e}}, D. and {von Gunten}, H. and {Wicki}, S. Waldmeier and {Wallraff}, W. and {Wang}, B.~C. and {Wang}, J.~Z. and {Wang}, Y.~H. and {Wiik}, K. and {Williams}, C. and {Wu}, S.~X. and {Xia}, P.~C. and {Yan}, J.~L. and {Yan}, L.~G. and {Yang}, C.~G. and {Yang}, J. and {Yang}, M. and {Ye}, S.~W. and {Yeh}, P. and {Xu}, Z.~Z. and {Zhang}, H.~Y. and {Zhang}, Z.~P. and {Zhao}, D.~X. and {Zhu}, G.~Y. and {Zhu}, W.~Z. and {Zhuang}, H.~L. and {Zichichi}, A. and {Zimmermann}, B. and {Zuccon}, P.},
+        title = "{The Alpha Magnetic Spectrometer (AMS) on the International Space Station: Part I - results from the test flight on the space shuttle}",
+      journal = {\physrep},
+         year = 2002,
+        month = aug,
+       volume = {366},
+       number = {6},
+        pages = {331-405},
+          doi = {10.1016/S0370-1573(02)00013-3},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002PhR...366..331A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+%% Planck XLII
+@article{Planck_XLII,
+	author = {{Planck Collaboration} and {Adam, R.} and {Ade, P. A. R.} and {Alves, M. I. R.} and {Ashdown, M.} and {Aumont, J.} and {Baccigalupi, C.} and {Banday, A. J.} and {Barreiro, R. B.} and {Bartolo, N.} and {Battaner, E.} and {Benabed, K.} and {Benoit-L\'evy, A.} and {Bernard, J.-P.} and {Bersanelli, M.} and {Bielewicz, P.} and {Bonavera, L.} and {Bond, J. R.} and {Borrill, J.} and {Bouchet, F. R.} and {Boulanger, F.} and {Bucher, M.} and {Burigana, C.} and {Butler, R. C.} and {Calabrese, E.} and {Cardoso, J.-F.} and {Catalano, A.} and {Chiang, H. C.} and {Christensen, P. R.} and {Colombo, L. P. L.} and {Combet, C.} and {Couchot, F.} and {Crill, B. P.} and {Curto, A.} and {Cuttaia, F.} and {Danese, L.} and {Davis, R. J.} and {de Bernardis, P.} and {de Rosa, A.} and {de Zotti, G.} and {Delabrouille, J.} and {Dickinson, C.} and {Diego, J. M.} and {Dolag, K.} and {Dor\'e, O.} and {Ducout, A.} and {Dupac, X.} and {Elsner, F.} and {En\ss{}lin, T. A.} and {Eriksen, H. K.} and {Ferri\`ere, K.} and {Finelli, F.} and {Forni, O.} and {Frailis, M.} and {Fraisse, A. A.} and {Franceschi, E.} and {Galeotta, S.} and {Ganga, K.} and {Ghosh, T.} and {Giard, M.} and {Gjerl\o{}w, E.} and {Gonz\'alez-Nuevo, J.} and {G\'orski, K. M.} and {Gregorio, A.} and {Gruppuso, A.} and {Gudmundsson, J. E.} and {Hansen, F. K.} and {Harrison, D. L.} and {Hern\'andez-Monteagudo, C.} and {Herranz, D.} and {Hildebrandt, S. R.} and {Hobson, M.} and {Hornstrup, A.} and {Hurier, G.} and {Jaffe, A. H.} and {Jaffe, T. R.} and {Jones, W. C.} and {Juvela, M.} and {Keih\"anen, E.} and {Keskitalo, R.} and {Kisner, T. S.} and {Knoche, J.} and {Kunz, M.} and {Kurki-Suonio, H.} and {Lamarre, J.-M.} and {Lasenby, A.} and {Lattanzi, M.} and {Lawrence, C. R.} and {Leahy, J. P.} and {Leonardi, R.} and {Levrier, F.} and {Liguori, M.} and {Lilje, P. B.} and {Linden-V\o{}rnle, M.} and {L\'opez-Caniego, M.} and {Lubin, P. M.} and {Mac\'{\i}as-P\'erez, J. F.} and {Maggio, G.} and {Maino, D.} and {Mandolesi, N.} and {Mangilli, A.} and {Maris, M.} and {Martin, P. G.} and {Mart\'{\i}nez-Gonz\'alez, E.} and {Masi, S.} and {Matarrese, S.} and {Melchiorri, A.} and {Mennella, A.} and {Migliaccio, M.} and {Miville-Desch\^enes, M.-A.} and {Moneti, A.} and {Montier, L.} and {Morgante, G.} and {Munshi, D.} and {Murphy, J. A.} and {Naselsky, P.} and {Nati, F.} and {Natoli, P.} and {N\o{}rgaard-Nielsen, H. U.} and {Oppermann, N.} and {Orlando, E.} and {Pagano, L.} and {Pajot, F.} and {Paladini, R.} and {Paoletti, D.} and {Pasian, F.} and {Perotto, L.} and {Pettorino, V.} and {Piacentini, F.} and {Piat, M.} and {Pierpaoli, E.} and {Plaszczynski, S.} and {Pointecouteau, E.} and {Polenta, G.} and {Ponthieu, N.} and {Pratt, G. W.} and {Prunet, S.} and {Puget, J.-L.} and {Rachen, J. P.} and {Reinecke, M.} and {Remazeilles, M.} and {Renault, C.} and {Renzi, A.} and {Ristorcelli, I.} and {Rocha, G.} and {Rossetti, M.} and {Roudier, G.} and {Rubi\~no-Mart\'{\i}n, J. A.} and {Rusholme, B.} and {Sandri, M.} and {Santos, D.} and {Savelainen, M.} and {Scott, D.} and {Spencer, L. D.} and {Stolyarov, V.} and {Stompor, R.} and {Strong, A. W.} and {Sudiwala, R.} and {Sunyaev, R.} and {Suur-Uski, A.-S.} and {Sygnet, J.-F.} and {Tauber, J. A.} and {Terenzi, L.} and {Toffolatti, L.} and {Tomasi, M.} and {Tristram, M.} and {Tucci, M.} and {Valenziano, L.} and {Valiviita, J.} and {Van Tent, F.} and {Vielva, P.} and {Villa, F.} and {Wade, L. A.} and {Wandelt, B. D.} and {Wehus, I. K.} and {Yvon, D.} and {Zacchei, A.} and {Zonca, A.}},
+	title = {Planck intermediate results - XLII. Large-scale Galactic magnetic fields},
+	DOI= "10.1051/0004-6361/201528033",
+	url= "https://doi.org/10.1051/0004-6361/201528033",
+	journal = {A\&A},
+	year = 2016,
+	volume = 596,
+	pages = "A103",
+}
 
 %% Kronberg 2007
 
